--- a/frontend/src/component/header/header.css
+++ b/frontend/src/component/header/header.css
@@ -1,10 +1,10 @@
-.navbar {
+.header {
   position: relative;
   background-color: #333;
   height: 70px;
 }
 
-.navbar-container {
+.header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
