--- a/frontend/src/component/header/header.css
+++ b/frontend/src/component/header/header.css
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   background-color: #333;
-  height: 70px;
+  height: 48px;
 }
 
 .header-container {
@@ -66,7 +66,7 @@
 @media (max-width: 768px) {
   .navbar-menu {
     position: absolute;
-    top: 70px;
+    top: 45px;
     left: 0;
     right: 0;
     flex-direction: column;
@@ -79,7 +79,7 @@
   .navbar-toggle {
     display: block;
     position: absolute;
-    top: 20px;
+    top: 5px;
     right: 20px;
     padding: 10px;
     z-index: 1;
@@ -95,7 +95,8 @@
   }
 
   .navbar-menu.active {
-    height: calc(100vh - 70px);
+    height: calc(100vh - 45px);
+    z-index: 999;
   }
 
   .navbar-item {
@@ -109,8 +110,6 @@
     display: block;
     width: 100%;
     text-align: center;
-    color: #fff;
-    text-decoration: none;
     transition: color 0.2s ease-in-out;
   }
 
