--- a/frontend/src/component/auth/auth.css
+++ b/frontend/src/component/auth/auth.css
@@ -1,63 +1,3 @@
-:root {
-  --background: #efefef;
-  --focus: #0096bfab;
-  --input-animation-duration: 0.1s;
-  --form-text: #333;
-}
-
-input {
-  transition: background-color 0.4s linear, border-color 0.4s linear,
-    color 0.4s linear, box-shadow 0.4s linear, transform 0.4s ease;
-  transition: background-color var(--input-animation-duration) linear,
-    border-color var(--input-animation-duration) linear,
-    color var(--input-animation-duration) linear,
-    box-shadow var(--input-animation-duration) linear,
-    transform var(--input-animation-duration) ease;
-}
-
-input {
-  background-color: var(--background);
-  font-family: inherit;
-  font-size: inherit;
-  margin-right: 6px;
-  margin-bottom: 6px;
-  padding: 10px;
-  border: none;
-  border-radius: 6px;
-  outline: none;
-  width: calc(100% - 20px);
-}
-
-button {
-  background-color: var(--background);
-  font-family: inherit;
-  font-size: inherit;
-  margin-right: 6px;
-  margin-bottom: 6px;
-  padding: 10px;
-  border: none;
-  border-radius: 6px;
-  outline: none;
-}
-
-input {
-  vertical-align: top;
-}
-
-label {
-  vertical-align: middle;
-  margin-bottom: 4px;
-  display: inline-block;
-}
-
-input:focus {
-  box-shadow: 0 0 0 2px var(--focus);
-}
-
-select:focus {
-  box-shadow: 0 0 0 2px var(--focus);
-}
-
 .authForm {
   width: 300px;
   margin: 0 auto;
@@ -85,7 +25,7 @@ select:focus {
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: #4caf50;
+  background-color: var(--success);
   color: white;
   border: none;
   border-radius: 5px;
@@ -98,7 +38,7 @@ select:focus {
 }
 
 .authForm .error {
-  color: red;
+  color: var(--danger);
   font-size: 0.8em;
 }
 
@@ -108,7 +48,7 @@ select:focus {
 }
 
 .authForm .loginRegisterLink a {
-  color: #4caf50;
+  color: var(--success);
   text-decoration: none;
 }
 
