--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,11 @@
 :root {
-  --background: #efefef;
-  --focus: #0096bfab;
-  --danger: #ff4136;
-  --success: #2ecc40;
+  --background: #f9f9f9;
+  --primary: #6D46C3;
+  --primary-hover: #371E83;
+  --secondary: #58AA22;
+  --secondary-hover: #2B720E;
+  --danger: #DB375F;
+  --info: #1982DB;
   --input-animation-duration: 0.1s;
   --form-text: #333;
 }
@@ -23,7 +26,7 @@ input {
 }
 
 input {
-  background-color: var(--background);
+  background-color: #e7e7e7;
   font-family: inherit;
   font-size: inherit;
   margin-right: 6px;
@@ -58,9 +61,9 @@ label {
 }
 
 input:focus {
-  box-shadow: 0 0 0 2px var(--focus);
+  box-shadow: 0 0 0 2px var(--primary);
 }
 
 select:focus {
-  box-shadow: 0 0 0 2px var(--focus);
+  box-shadow: 0 0 0 2px var(--primary);
 }
