--- a/frontend/src/component/auth/auth.css
+++ b/frontend/src/component/auth/auth.css
@@ -2,9 +2,10 @@
   width: 300px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ddd;
+  border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .authForm h2 {
@@ -25,16 +26,15 @@
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: var(--success);
+  background-color: var(--primary);
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  text-transform: uppercase;
 }
 
 .authForm input[type='submit']:hover {
-  background-color: #45a049;
+  background-color: var(--primary-hover);
 }
 
 .authForm .error {
@@ -48,8 +48,8 @@
 }
 
 .authForm .loginRegisterLink a {
-  color: var(--success);
-  text-decoration: none;
+  color: var(--secondary);
+  text-decoration: underline;
 }
 
 input[type='submit']:disabled {
