--- a/frontend/src/component/video/video.css
+++ b/frontend/src/component/video/video.css
@@ -5,9 +5,7 @@ video {
 
 .card {
   border-width: 1px;
-  border-color: rgba(219, 234, 254, 1);
   border-radius: 1rem;
-  background-color: rgba(255, 255, 255, 1);
   padding: 1rem;
 }
 
@@ -21,13 +19,16 @@ video {
 .box {
   flex-basis: 0;
   flex-grow: 1;
-  background-color: #e9e9e9;
   padding: 20px;
   border-radius: 8px;
+  background-color: var(--background);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
 }
 
 .feedback {
-  background-color: #e9e9e9;
+  background-color: var(--background);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   border-radius: 8px;
   min-width: 200px;
@@ -35,6 +36,7 @@ video {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  border: 1px solid #ccc;
 }
 
 .btn {
@@ -57,7 +59,7 @@ video {
 }
 
 .like-active {
-  background-color: #2ecc40;
+  background-color: var(--secondary);
 }
 
 .dislike-active {
