change background color

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,8 +2,8 @@
   --background: #f9f9f9;
   --primary: #6D46C3;
   --primary-hover: #371E83;
-  --secondary: #58AA22;
-  --secondary-hover: #2B720E;
+  --secondary: #2E7A11;
+  --secondary-hover: #1E620A;
   --danger: #DB375F;
   --info: #1982DB;
   --input-animation-duration: 0.1s;
