--- a/frontend/src/component/upload/UploadVideo.css
+++ b/frontend/src/component/upload/UploadVideo.css
@@ -106,22 +106,24 @@
   display: block;
   width: 100%;
   height: 20px;
-  background-color: #e7e7e7;
   border: none;
   border-radius: 10px;
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 .progress-bar progress::-webkit-progress-bar {
-  background-color: var(--info);
+  background-color: #e7e7e7;
+  border-radius: 10px;
 }
 
 .progress-bar progress::-webkit-progress-value {
-  background-color: var(--info);
+  background-color: var(--primary);
   border-radius: 10px;
 }
 
 .progress-bar progress::-moz-progress-bar {
-  background-color: var(--info);
+  background-color: var(--primary);
   border-radius: 10px;
 }
 
