--- a/frontend/src/component/header/header.css
+++ b/frontend/src/component/header/header.css
@@ -14,7 +14,6 @@
 
 .navbar-brand h1 {
   font-size: 24px;
-  color: #333;
   margin: 0;
 }
 
@@ -27,7 +26,6 @@
   display: block;
   height: 3px;
   width: 25px;
-  background-color: #333;
   margin: 5px 0;
   border-radius: 3px;
   transition: all 0.4s ease-in-out;
@@ -53,7 +51,7 @@
 }
 
 .navbar-link {
-  color: #333;
+  color: black;
   text-decoration: none;
   font-size: 18px;
   transition: all 0.4s ease-in-out;
