--- a/frontend/src/component/video/video.css
+++ b/frontend/src/component/video/video.css
@@ -84,3 +84,27 @@ video {
     transition: all 0.4s ease-in-out;
   }
 }
+
+.loading-skeleton {
+  padding-bottom: 56.25%;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  background-image: linear-gradient(
+    90deg,
+    #f0f0f0 25%,
+    #f8f8f8 50%,
+    #f0f0f0 75%
+  );
+  background-size: 200% 100%;
+  animation: loading-skeleton-animation 1s infinite linear;
+}
+
+@keyframes loading-skeleton-animation {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
