--- a/frontend/src/component/upload/UploadVideo.css
+++ b/frontend/src/component/upload/UploadVideo.css
@@ -9,7 +9,6 @@
   max-width: 600px;
   margin: auto;
   background-color: var(--background);
-  color: #333;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -22,6 +21,19 @@
 .input-group input[type='file']:focus + label,
 .upload-button:focus {
   outline: 2px solid var(--info);
+}
+
+.video-title-input-group {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.video-title-input-group label {
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
 .error-message {
