--- a/frontend/src/component/video/video.css
+++ b/frontend/src/component/video/video.css
@@ -6,14 +6,14 @@ video {
 .card {
   border-width: 1px;
   border-radius: 1rem;
-  padding: 1rem;
+  padding: 1em;
 }
 
 .container {
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  padding: 0 3em;
+  padding: 0 4em;
 }
 
 .box {
@@ -24,6 +24,7 @@ video {
   background-color: var(--background);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid #ccc;
+  aspect-ratio: 16/9;
 }
 
 .feedback {
@@ -67,10 +68,6 @@ video {
 }
 
 @media (max-width: 820px) {
-  video {
-    width: 100%;
-  }
-
   .container {
     flex-direction: column;
     padding: 0;
