--- a/frontend/src/component/auth/auth.css
+++ b/frontend/src/component/auth/auth.css
@@ -2,10 +2,9 @@
   width: 300px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
+  border: 2px dashed black;
   border-radius: 5px;
-  background-color: #f9f9f9;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  background-color: white;
 }
 
 .authForm h2 {
@@ -22,7 +21,7 @@
   margin-bottom: 5px;
 }
 
-.authForm input[type='submit'] {
+.authForm button[type='submit'] {
   display: block;
   width: 100%;
   padding: 10px;
@@ -33,7 +32,7 @@
   cursor: pointer;
 }
 
-.authForm input[type='submit']:hover {
+.authForm button[type='submit']:hover {
   background-color: var(--primary-hover);
 }
 
@@ -52,6 +51,6 @@
   text-decoration: underline;
 }
 
-input[type='submit']:disabled {
+button[type='submit']:disabled {
   cursor: not-allowed;
 }
