refactor uploadVideo Component
* move AWS S3 upload logic from uploadVideo component to a dedicated uploadService module
* introduce a single instance for S3 client
* optimize upload progress updates with a minimum interval to prevent excessive rerenders

--- a/frontend/src/component/upload/UploadVideo.css
+++ b/frontend/src/component/upload/UploadVideo.css
@@ -133,11 +133,13 @@
 .progress-bar progress::-webkit-progress-value {
   background-color: var(--primary);
   border-radius: 10px;
+  transition: width 0.2s linear;
 }
 
 .progress-bar progress::-moz-progress-bar {
   background-color: var(--primary);
   border-radius: 10px;
+  transition: width 0.2s linear;
 }
 
 .progress-bar p {
