--- a/frontend/src/component/profile/profile.css
+++ b/frontend/src/component/profile/profile.css
@@ -7,15 +7,14 @@
 }
 
 .profile-container h2 {
-  font-size: 2.5em;
   margin-bottom: 1em;
 }
 
 .profile-content {
-  background-color: #f9f9f9;
-  border-radius: 10px;
+  background-color: var(--background);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  border: 1px solid #ccc;
-  padding: 2em;
+  border-radius: 10px;
+  border: 2px dashed black;
+  padding: 20px;
   text-align: center;
 }
