--- a/frontend/src/component/upload/UploadVideo.css
+++ b/frontend/src/component/upload/UploadVideo.css
@@ -3,13 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
-  border: 2px dashed black;
-  border-radius: 4px;
   max-width: 600px;
   margin: auto;
-  background-color: var(--background);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .input-group {
@@ -32,7 +27,6 @@
 }
 
 .video-title-input-group label {
-  font-weight: bold;
   margin-bottom: 5px;
 }
 
@@ -74,7 +68,8 @@
   justify-content: center;
   align-items: center;
   height: 100px;
-  border: 2px dashed #ccc;
+  border: 2px dashed #edeff2;
+  background-color: #edeff2;
   border-radius: 4px;
   margin-bottom: 20px;
   padding: 20px;
@@ -91,10 +86,7 @@
 
 .selected-file {
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
   text-align: center;
-  color: #333;
   font-weight: bold;
 }
 
@@ -112,7 +104,6 @@
 .progress-bar label {
   display: block;
   margin-bottom: 10px;
-  font-weight: bold;
 }
 
 .progress-bar progress {
@@ -120,7 +111,7 @@
   width: 100%;
   height: 20px;
   border: none;
-  border-radius: 10px;
+  border-radius: 4px;
   -webkit-appearance: none;
   appearance: none;
 }
@@ -153,12 +144,6 @@
   cursor: pointer;
   margin: 0;
   padding: 0 0 0 5px;
-}
-
-.video-title-input-group label,
-.progress-bar label,
-.upload-label {
-  font-weight: 500;
 }
 
 .upload-button,
